styles.css
body {
  font-family: Cormorant, serif;
}

/* Navigation Bar */

h1 {
  display: inline-block;
  font-weight: 400;
  margin: 0 32px 0 0;
}

.nav-container {
  margin: 32px;
}

.navbar {
  display: inline-block;
}

.navbar ul {
  padding: 0;
}

.navbar li {
  display: inline-block;
}

.navbar a {
  color: black;
  font-size: 20px;
  margin: 0 8px;
  text-decoration: none;
}

a.active {
  border-bottom: 1px solid black;
}

/* Image Gallery */

.gallery {
  padding: 16px;
}

.card {
  box-sizing: border-box;
  display: inline-block;
  padding: 16px;
  width: 49.75%;
}

.card img {
  height: 500px;
  object-fit: cover;
  width: 100%;
}

.card img:hover {
  opacity: 0.9;
}

.card h2 {
  display: inline-block;
  font-weight: 400;
  margin: 8px 0 16px 0;
}

/* About Section */

.about {
  margin: 100px 0 100px 200px;
  min-width: 600px;
  width: 40%;
}

.about h3 {
  font-size: 40px;
  font-weight: 400;
}

.cta {
  border-bottom: 1px solid black;
  display: inline-block;
  margin-top: 0;
  padding-bottom: 5px;
}

.contact {
  margin-top: 100px;
}

.contact p {
  font-size: 20px;
  margin: 5px;
}

@media only screen and (max-width: 1000px) {
  .card {
    width: 100%;
  }
  .about {
    margin: 100px 0 100px 100px;
  }
}

@media only screen and (max-width: 700px) {
  .gallery {
    padding: 8px;
  }
  .card {
    padding: 0;
  }
  .about {
    margin: 100 auto;
    min-width: 450px;
  }

}

